Etter Section 7: Trillo Project - Master Flexbox!

--- a/.gitignore
+++ b/.gitignore
@@ -252,3 +252,7 @@ dist
 /natours/css/style.comp.css
 /natours/css/style.concat.css
 /natours/css/style.prefix.css
+/trillo/css/style.comp.css
+/trillo/css/style.concat.css
+/trillo/css/style.css
+/trillo/css/style.prefix.css
