Etter Section 9: Nexter Project - Master CSS Grid Layouts!

--- a/.gitignore
+++ b/.gitignore
@@ -256,3 +256,5 @@ dist
 /trillo/css/style.concat.css
 /trillo/css/style.css
 /trillo/css/style.prefix.css
+/nexter/css/style.comp.css
+/nexter/css/style.css
