--- a/nexter/package.json
+++ b/nexter/package.json
@@ -8,15 +8,15 @@
     "devserver": "live-server",
     "start": "npm-run-all --parallel devserver watch:sass",
     "compile:sass": "node-sass sass/main.scss css/style.comp.css",
-    "prefix:css": "postcss --use autoprefixer css/style.comp.css -o css/style.prefix.css",
+    "prefix:css": "postcss css/style.comp.css --use autoprefixer -o css/style.prefix.css",
     "compress:css": "node-sass css/style.prefix.css css/style.css --output-style compressed",
     "build:css": "npm-run-all compile:sass prefix:css compress:css"
   },
-  "author": "Jonas",
+  "repository": "https://github.com/achwell/Advanced-CSS-and-Sass-Flexbox-Grid-Animations-and-More-.git",
+  "author": "Axel Wulff Sæther <axelwulff@mac.com>",
   "license": "ISC",
   "devDependencies": {
     "autoprefixer": "^10.4.4",
-    "concat": "^1.0.3",
     "node-sass": "^7.0.1",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.12",
